--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -28,6 +28,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  gap: 5rem;
   margin-right: 15px;
   margin-left: 15px;
 
@@ -36,6 +37,13 @@
 .col{
   width: 22%;
   padding-right: 20px;
+  font-size: 1rem;
+}
+
+.iframe{
+  width: 100%;
+  height: 100%;
+  
 }
 
 .listitem{
