--- a/frontend/src/Components/HeroSection/HeroSection.css
+++ b/frontend/src/Components/HeroSection/HeroSection.css
@@ -7,7 +7,7 @@
 
 .herosection{
     max-width: 50%;
-    padding: 2rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column; 
     justify-content: center;
@@ -21,14 +21,15 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-size: 2.5rem;
 }
 .herosection__left p{
       margin: 2rem 0;
 }
 
 .herosection__left h1 {
-      text-transform: capitalize;
-      font-weight: bold;
+    font-size: 2.5rem;
+    font-weight: bold;
 }
   
 .herosection__right {
@@ -43,6 +44,6 @@ figure {
   }
  
   .imgsrc {
-    width: 100%;
+    width: 125%;
     height: auto;
   }
