--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,11 +1,17 @@
 .main-footer {
+
   background: #0F0F0F;
   padding: 60px 0 25px 0;
-  color: #d8d8d8;
+  color: white;
   font-size: 14px;
   overflow: hidden;
   margin-top: auto;
   width: 100%;
+}
+
+.list-unstyled a{
+  color: white;
+  text-decoration: none;
 }
 
 .container {
@@ -17,25 +23,26 @@
 
 .h4{
   color: #fff;
-  font-size: 18px;
+  font-size: 25px;
   margin-bottom: 20px;
   line-height: 1.3;
   padding: 0;
   font-family: 'HelveticaNeueLT Com 45 Lt';
   font-weight: 300;
 }
+
 .row{
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  gap: 5rem;
+  gap: 4rem;
   margin-right: 15px;
   margin-left: 15px;
 
 }
 
 .col{
-  width: 22%;
+  width: auto;
   padding-right: 20px;
   font-size: 1rem;
 }
@@ -50,7 +57,6 @@
   font-size: 1rem;
   color: #fff;
   font-family: 'HelveticaNeueLT Com 45 Lt';
-  font-weight: 300;
   margin-bottom: 10px;
   line-height: 1.3;
   padding: 0;
