--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -88,3 +88,13 @@ Button{
     transform: rotate(360deg);
   }
 }
+
+.form {
+	padding: 20px;
+	margin: 20px;
+	max-width: 500px;
+	margin: 50px auto;
+	background: white;
+	border-radius: 5px;
+	box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.1);
+}
