--- a/frontend/src/Components/HeroSection/HeroSection.css
+++ b/frontend/src/Components/HeroSection/HeroSection.css
@@ -44,6 +44,8 @@ figure {
   }
  
   .imgsrc {
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 20px rgba(0,0,0,20);
     width: 125%;
     height: auto;
   }
