--- a/frontend/src/Pages/CSS/Product.css
+++ b/frontend/src/Pages/CSS/Product.css
@@ -1,9 +1,10 @@
 .Filter-prod{
     display: flex;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: 0.2fr 1fr;
     grid-auto-rows: minmax(100px,auto);
     justify-content: space-between;
     margin: 1rem;
+    gap: 1rem;
     padding: 1rem;
 }
 
@@ -21,9 +22,13 @@
     box-shadow: 0 2px 8px rgba(0,0,0,0.26);
     border: 2px solid #000;
     padding: 0 1rem;
-    margin: 0.5rem;
     width: 20rem;
     height: fit-content;
+    margin: 0;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
     /* border-radius: .5rem; */
 }
 
@@ -31,21 +36,7 @@
     text-decoration: none;
 }
 
-
-.card-col{
-    margin: 0;
-    align-items: center;
-    grid-template-columns: 1fr 1fr;
-    display: flex;
-    flex-direction: column;
-}
-
 .image img{ 
-    /* width: 8rem;
-    height: 8rem;
-    border: #000;
-    border-style: ridge;
-    border-radius: .5rem; */
     width: 8rem;
     display: flex;
     justify-content: center;
