--- a/frontend/src/Pages/CSS/Login.css
+++ b/frontend/src/Pages/CSS/Login.css
@@ -9,10 +9,10 @@ body {
     margin-right: 10px;
   }
   
-  /* .centerTable {
+.centerTable {
     margin: 0px auto;
   }
-   */
+ 
   h2 {
       color: #3f51b5;
   }
