--- a/frontend/src/Pages/CSS/Product.css
+++ b/frontend/src/Pages/CSS/Product.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   margin: 1rem;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .Filter {
@@ -13,7 +13,6 @@
   padding: inherit;
   border: black;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-
   border-style: groove;
 }
 
@@ -27,11 +26,21 @@
 
 .Filter-1-2-1 select{
     width: 100%;
+    display: flex;
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 2rem;
+    background-color: white;
 }
 
 
 .Filter-1-3-1 select{
     width: 100%;
+    display: flex;
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 2rem;
+    background-color: white;
 }
 
 
@@ -50,6 +59,7 @@
   border: 2px solid #000;
   padding: 0 1rem;
   width: 20rem;
+  height: 20rem;
   height: fit-content;
   margin: 0;
   align-items: center;
@@ -74,9 +84,7 @@
 }
 
 .details {
-  /* text-justify: auto;
-    margin: 0 1rem; */
-  margin: 2rem 0;
+  margin: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -92,7 +100,7 @@
   font-size: 2rem;
   color: black;
   width: auto;
-  font-weight: 600;
+  font-weight: 1000;
   text-align: center;
 }
 
