--- a/frontend/src/Pages/CSS/Profile.css
+++ b/frontend/src/Pages/CSS/Profile.css
@@ -1,9 +1,27 @@
 .ProfileContainer{
     display: flex;
+    padding: 2rem;
     flex-direction: column;
-    align-items: left;
-    justify-content: left;
+    text-align: left;
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
+}
+
+.ProfileInfo{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    
+}
+
+.Profileimg{
+    font-size: 3rem;
+    background-color: black;
+    margin: 0 auto;
+    border-radius: 50%;
+    color: white;
+    margin-bottom: 1rem;
 }
