--- a/frontend/src/Pages/CSS/Feedback.css
+++ b/frontend/src/Pages/CSS/Feedback.css
@@ -8,10 +8,11 @@
 	box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
-.button {
-	margin: 5px auto;
-}
+.feedbacksubmit {
+	width: fit-content;
 
-.button {
-	margin: 5px auto;
+	border: 0;
+	padding: 10px 20px;
+	font-size: 1.2em;
+	border-radius: 5px;
 }
