--- a/frontend/src/Pages/CSS/Product.css
+++ b/frontend/src/Pages/CSS/Product.css
@@ -4,12 +4,13 @@
   /* grid-auto-rows: minmax(100px, auto); */
   justify-content: space-between;
   margin: 1rem;
-  gap: 1rem;
+  gap: 0.3rem;
   padding: 0.5rem;
 }
 
 .Filter {
   width: 20%;
+  background-color: ghostwhite;
   padding: inherit;
   border: black;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
@@ -26,6 +27,8 @@
 
 .Filter-1-2-1 select{
     width: 100%;
+    text-align: center;
+    border-radius: 1rem;
     display: flex;
     margin-bottom: auto;
     margin-top: auto;
@@ -35,7 +38,9 @@
 
 
 .Filter-1-3-1 select{
+    border-radius: 1rem;
     width: 100%;
+    text-align: center;
     display: flex;
     margin-bottom: auto;
     margin-top: auto;
@@ -74,7 +79,9 @@
 }
 
 .image img {
+  margin-top: 10px;
   width: 8rem;
+  height: 8rem;
   display: flex;
   justify-content: center;
   align-items: center;
